feat: add Render deployment configuration
- Add render.yaml Blueprint for both frontend and backend services
- Add Dockerfile for Spring Boot backend (multi-stage build)
- Update application.properties to use environment variables
- Update WebConfig and SecurityConfig for dynamic CORS origins
- Add _redirects for frontend SPA routing on Render
- Move sensitive credentials to environment variables